# schedule-coordinator-bot

./: .env.example  .gitignore  COMPLETION_REPORT.txt  DEVCONTAINER_SETUP_REPORT.md  DOCUMENTATION_INDEX.md  FILE_MANIFEST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TEST_CHECKLIST.md  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  LINE_BOT_IMPLEMENTATION_REPORT.md  LINE_BOT_MODELS_GUIDE.md  LINE_BOT_SETUP_GUIDE.md  LINE_BOT_TESTING_GUIDE.md  config.py  database.py  dependencies.py  fastapi_line_webhook.py  line_bot_test.py  main.py  pyproject.toml  setup_line_models.sh  test_models.py
backend/ai/: __init__.py  router.py
backend/api/: __init__.py  deadline.py  hotpepper.py  survey.py  vote.py  vote_completion.py
backend/crud/: __init__.py  user.py
backend/db/: __init__.py  deadline.py  line_users.py  poll.py  poll_responses.py  restaurant_conditions.py  restaurant_votes.py
backend/line/: __init__.py  api.py  config.py  handlers.py  reply.py  signature.py  webhook.py
backend/models/: __init__.py  line_channel.py  rich_menu.py  user.py  user_rich_menu.py
backend/routers/: __init__.py  calendar_update.py  google_auth.py  line_auth.py  user.py
backend/schemas/: __init__.py  user.py
backend/services/: __init__.py  google_calendar_service.py  google_service.py  hp_services.py  line_service.py
backend/usecases/: __init__.py  poll_usecase.py  restaurant_usecase.py
backend/utils/: __init__.py  hotpepper_codes.py  security.py
db/: Dockerfile
(+20 files in other folders)
